--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
-
-APP_NAME='Spy Courier'
+﻿APP_NAME='Ship-Hub'
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL='http://127.0.0.1:8000'
-TIME_ZONE='Asia/Dhaka'
+APP_URL=http://localhost:8000
+TIME_ZONE="America/New_York"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -13,14 +12,14 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=courier_management-application
+DB_DATABASE=shiphub
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -31,19 +30,35 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME="5Core Management"
+
+SHOPIFY_5CORE_DOMAIN=
+SHOPIFY_5CORE_API_KEY=
+SHOPIFY_5CORE_PASSWORD=
+
+ALIEXPRESS_APP_KEY=
+ALIEXPRESS_APP_SECRET=
+ALIEXPRESS_REFRESH_TOKEN=
+ALIEXPRESS_ACCESS_TOKEN=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
+
+TIKTOK_CLIENT_KEY=
+TIKTOK_CLIENT_SECRET=
+TIKTOK_REDIRECT_URI=
+TIKTOK_AUTH_BASE=https://auth.tiktok-shops.com
+TIKTOK_API_BASE=https://open-api.tiktokglobalshop.com
+TIKTOK_SHOP_ID=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -61,3 +76,65 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SMS_API_KEY=
 SMS_SENDER_ID=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT=
+
+MACY_CLIENT_ID=
+MACY_CLIENT_SECRET=
+MACY_COMPANY_ID=
+
+WAYFAIR_CLIENT_ID=
+WAYFAIR_CLIENT_SECRET=
+WAYFAIR_AUDIENCE=https://api.wayfair.com
+
+EBAY_BASE_URL=https://api.ebay.com
+EBAY_APP_ID=
+EBAY_CERT_ID=
+EBAY_DEV_ID=
+EBAY_REFRESH_TOKEN=
+EBAY_SCOPE=https://api.ebay.com/oauth/api_scope
+
+EBAY_3_APP_ID=
+EBAY_3_CERT_ID=
+EBAY_3_DEV_ID=
+EBAY_3_REFRESH_TOKEN=
+
+
+SHOPIFY_API_KEY=
+SHOPIFY_PASSWORD=
+SHOPIFY_DOMAIN=
+
+DOBA_PUBLIC_KEY=
+DOBA_PRIVATE_KEY=
+DOBA_APP_KEY=
+
+REVERB_TOKEN=
+
+SHIPPO_BASE_URL=https://api.goshippo.com
+SHIPPO_API_TOKEN=
+
+WALMART_CLIENT_ID=
+WALMART_CLIENT_SECRET=
+
+SHIPSTATION_BASE_URL=https://api.shipstation.com/v2
+SHIPSTATION_API_KEY=
+
+SENDLE_KEY=
+SENDLE_SECRET=
+SENDLE_URL=https://api.sendle.com/api
+
+PROLIGHTSOUNDS_SHOPIFY_API_KEY=
+PROLIGHTSOUNDS_SHOPIFY_PASSWORD=
+PROLIGHTSOUNDS_SHOPIFY_DOMAIN=
+
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o
+
+
+
+AMAZON_ADS_CLIENT_ID=
+AMAZON_ADS_CLIENT_SECRET=
+AMAZON_ADS_REFRESH_TOKEN=
+AMAZON_ADS_PROFILE_IDS=
